--- a/templates/index3.html
+++ b/templates/index3.html
@@ -20,7 +20,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Second Opinion</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Puntua tu foto!</a>
             </div>
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -50,7 +50,7 @@
         <title>Flask App</title>
 	<h1><b>Sube tu foto&#33</b></h1>
         {{ dropzone.load() }}
-        {{ dropzone.style('border: 2px dashed #0087F9; margin: 10%; min-height: 350px;') }}
+        {{ dropzone.style('border: 2px dashed #0087F9; margin: 10%; min-height: 250px;') }}
     </head>
     <body>
 
@@ -69,9 +69,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1><b>About</b><br/><br/> <br/><br/></h1>
+                    <h1><b>About</b></h1>
 			
-				<h1>En Second Opinion intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
+				<h1>En Puntua Tu Foto intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
 
                 </div>
             </div>
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1><b>What We Do </b><br/><br/><br/>   </h1>
+                    <h1><b>What We Do </b></h1>
 <h1>Nuestros modelos de IA estan entrenados para distinguir entre fotografias de Redes Sociales de Alta y Baja calidad. De esta forma podemos ayudarte a causar la impresion que tu decidas causar.<br/> <br>  
 Ademas no almacenamos ninguna de tus fotos, son borradas al instante.</h1>
 
@@ -97,7 +97,7 @@ Ademas no almacenamos ninguna de tus fotos, son borradas al instante.</h1>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1><b>Contact</b><br/><br/> <br/>  </h1>
+                    <h1><b>Contact</b></h1>
 			    <h1>so.support@gmail.com</h1>
                 </div>
             </div>
