--- a/templates/index3.html
+++ b/templates/index3.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-12">
                     <h1><b>About</b></h1>
 			
-				<h1>En Puntua Tu Foto intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
+				<h1>En Second Opinion intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
 
                 </div>
             </div>
@@ -84,8 +84,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1><b>What We Do </b></h1>
-<h1>Nuestros modelos de IA estan entrenados para distinguir entre fotografias de Redes Sociales de Alta y Baja calidad. De esta forma podemos ayudarte a causar la impresion que tu decidas causar.<br/> <br>  
-Ademas no almacenamos ninguna de tus fotos, son borradas al instante.</h1>
+<h1>Nuestra IA distingue las fotos de las Redes Sociales de Alta y Baja calidad.<br/> 
+No almacenamos ninguna de tus fotos.</h1>
 
                 </div>
             </div>
