--- a/templates/index3.html
+++ b/templates/index3.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-12">
                     <h1><b>About</b></h1>
 			
-				<h1>En Second Opinion intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
+				<h1>En Puntua tu Foto! intentamos darte una segunda opinion sobre esas fotos que quieres compartir. </h1>
 
                 </div>
             </div>
