--- a/templates/results.html
+++ b/templates/results.html
@@ -22,7 +22,7 @@
 <a id="photo_real" 
 
 {% for file_url in file_urls %}
-    <li><img align="middle" width="500" src="{{ file_url }}"></li>
+    <li><img class='illustration' align="middle" style='max-width: 500px' src="{{ file_url }}"></li>
 {% endfor %}
 
 </a>
