--- a/static/css/sticky-menu_2.css
+++ b/static/css/sticky-menu_2.css
@@ -1,6 +1,7 @@
 body {background:url('../img/background_tile_1.jpg');
     width: 100%;
     height: 100%;
+    color: white;
 }
 html {
     font-family:sans-serif;
@@ -50,7 +51,7 @@ html {
   text-align: bottom;
   width: 50%;
   font-size: 50px;
-  color: white
+  color: white;
 }
 
 
