--- a/static/css/sticky-menu_2.css
+++ b/static/css/sticky-menu_2.css
@@ -1,14 +1,14 @@
 body {background:url('../img/background_tile_1.jpg');
     width: 100%;
-    height: 100%;
-    color: #fff;
+    height: 100vh;
+	margin:0;
+	overflow: hidden;
 }
 html {
     font-family:sans-serif;
     background:url('../img/background_tile_1.jpg');
     width: 100%;
-    height: 100%;
-    color: #fff;
+    height: 100vh;
 }
 
 @media(min-width:767px) {
@@ -30,30 +30,30 @@ html {
     text-decoration: none;
 }
 
-.illustration img {
-  width: 100%;
-  display: block;
+#container {
+   height: 100px;
+   width: 100%;
+   margin: 100px auto;
+   vertical-align:bottom;
+   horizontal-align: middle;
+   font-size: 50px;
+   font-family:sans-serif;
+   color: white;
+   position: relative;
+  }
+
+#container img {
+    position: fixed;
+    width:400px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-.welcome-section {
-    height: 100%;
-    padding-top: 150px;
-    text-align: center;    
+#container span {
+   position:fixed;
+   left: 50%;
+   transform: translateX(-50%);
+   bottom:0px;
+   width:100%;
 }
-
-#photo_real {
-
-  text-align: center;
-  width: 100%;
-  font-size: 50px;
-}
-
-#photo {
-  font-family:sans-serif;
-  text-align: bottom;
-  width: 50%;
-  font-size: 50px;
-  color: #fff;
-}
-
-
